--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,33 +7,9 @@ trigger:
 
 resources:
 - repo: self
-
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'c03e10bd-9c0a-4422-9705-612419ef72e9'
-  imageRepository: 'kapilyadavapostgresgoconnector'
-  containerRegistry: 'myazureregistry1989.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-  tag: '$(Build.BuildId)'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+- task: Docker@2
+  inputs:
+    containerRegistry: 'myazureregistry1989'
+    repository: 'mytestrepo'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
